* Apr 17 2001 hship

[417065] Use JAXP instead of Xerces
Convert to latest Jetty; convert dependency on Xerces to JAXP 1.1 and use
light-weight Crimson instead of Xerces.
Create com.primix.foundation.xml.AbstractDocumentParser.

* Apr 9 2001 hship

Keep the buffer and parameters live in a StatementAssembly even after
creating the IStatement (useful for debugging).
[414879] ClassCastException / PropertyHelper

* Apr 4 2001 hship

Add some simple method overrides to StatementAssembly to make it more useful.

* Apr 3 2001 hship

Add @since tags to new methods in AbtractEngine.
[413428] DateField should allow format to be specified

* Mar 19 2001 hship

[409751] Action encodes URL wrong

* Mar 7 2001 hship

[406819] handleXXX methods should be protected

* Mar 2 2001 hship

Make it easier to change the StaleLink, StaleSession and Exception page behavior.
Improve PropertyHelper documentation.

* Feb 23 2001 hship

Remove the "is rewinding" check from RenderTemplateHTML ... just rely on the use
of a NullResponseWriter when rewinding.
Deprecate the immediate submit option for the SelectPropertySelectionRenderer.
Fix minor errors in inspector/ShowLogging.html template.
Fix JavaDoc comments in InsertText component.
[132729] AbstractComponent.getBindingNames() doesn't return all names
[132726] Script component with no bindings throws NullPointerException
[133265] ImageSubmit NullPointerException if disabled 

* Feb 12 2001 hship

Fix some bad JavaDoc comments.
Install accidentally ommitted classes.

* Feb 12 2001 hship

Replace NullOutputStream with NullResponseWriter.
Minor formatting changes (for readability) to certain component's output.
Standardize of "disabled" (with a default of false) for all components (there was
previously a mix of "enabled" and "disabled").
Simplify the ShowInspector component (remove the parameters that allow its image
to be customized).

* Feb 9 2001 hship

Have RequestContext implement IRender.

* Feb 7 2001 hship
